# Cloud_Misconfiguration_Detection

./: .env.example  .gitignore  Makefile  POLICY_GUIDE.md  docker-compose.yml  localfixes.md  setup.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  dependencies.py  main.py
backend/app/collectors/: base.py  ec2.py  iam.py  kms.py  lambda_collector.py  logging_collector.py  orchestrator.py  rds.py  s3.py  vpc.py
backend/app/engine/: evaluator.py  opa_cli.py  opa_client.py  opa_http.py  result_parser.py
backend/app/models/: aws_input.py  violation.py
backend/app/pipeline/: __init__.py  alert_generator.py  drift_detector.py  event_correlator.py  event_handler.py  event_mapper.py  event_parser.py  models.py  risk_scorer.py  state_manager.py  ws_manager.py
backend/app/routers/: compliance.py  drift.py  policies.py  remediation.py  risk.py  scans.py  violations.py  websocket.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_drift_api.py  test_models.py  test_risk_api.py  test_security.py  test_websocket_api.py
backend/tests/test_collectors/: test_base.py  test_coverage_boost.py  test_ec2.py  test_iam.py  test_kms.py  test_lambda.py  test_logging.py  test_orchestrator.py  test_rds.py  test_s3.py  test_vpc.py
backend/tests/test_engine/: test_evaluator.py  test_opa_client.py  test_opa_factory.py  test_opa_http.py  test_result_parser.py
backend/tests/test_integration/: test_pipeline_e2e.py  test_remediation_e2e.py
backend/tests/test_pipeline/: test_alert_generator.py  test_drift_detector.py  (+7 more)
(+287 files in other folders)
